--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,7 +30,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: npm ci
-        run: npm ci
+        run: npm install && npm ci
       - name: Type check
         uses: andoshin11/typescript-error-reporter-action@v1.0.2
       - name: Test
