--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint -f stylish",
     "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepare": "husky install",
     "fc:new": "hygen fc new",
-    "lint:fix": "lint --fix",
-    "format": "prettier --write \"./**/**/*.{ts,tsx}\""
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"./**/**/*.{ts,tsx}\"",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -46,6 +47,7 @@
     "babel-loader": "^8.3.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
     "jest": "^29.4.1",
