--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -34,8 +34,10 @@ jobs:
       - name: npm ci
         run: npm install && npm ci
       - name: reviewdog ESLint
-        uses: reviewdog/action-eslint@v1
+      - uses: reviewdog/action-setup@v1
       - name: Run reviewdog
+        with:
+          reviewdog_version: latest
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run lint | reviewdog -f=eslint -reporter=github-pr-review -filter-mode=diff_context -fail-on-error=true
