--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "hygen": "^6.2.11",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.3"
   }
 }
