fix: fix ESLint GitHub Actions setup

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -34,7 +34,7 @@ jobs:
       - name: npm ci
         run: npm install && npm ci
       - name: reviewdog ESLint
-      - uses: reviewdog/action-setup@v1
+        uses: reviewdog/action-setup@v1
       - name: Run reviewdog
         with:
           reviewdog_version: latest
