--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -35,8 +35,7 @@ jobs:
         run: npm install && npm ci
       - name: reviewdog ESLint
         uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
+      - name: Run reviewdog
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run lint | reviewdog -f=eslint -reporter=github-pr-review -filter-mode=diff_context -fail-on-error=true
