--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -46,7 +47,8 @@
     "@storybook/testing-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/js-cookie": "^3.0.3",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-loader": "^8.3.0",
@@ -58,6 +60,10 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.2",
-    "prettier": "^2.8.3"
+    "msw": "^1.1.0",
+    "msw-storybook-addon": "^1.7.0",
+    "next-router-mock": "^0.9.2",
+    "prettier": "^2.8.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
