--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.2",
-    "msw": "^1.0.0",
+    "msw": "^0.49.3",
     "msw-storybook-addon": "^1.7.0",
     "next-router-mock": "^0.9.2",
     "prettier": "^2.8.3",
+    "webpack": "^5.75.0",
     "whatwg-fetch": "^3.6.2"
   }
 }
