--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint -f stylish",
     "test": "jest",
     "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prepare": "husky install",
     "fc:new": "hygen fc new",
     "lint:fix": "next lint --fix",
@@ -35,16 +35,15 @@
     "@babel/core": "^7.20.12",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/testing-react": "^1.3.0",
+    "@storybook/addon-actions": "^7.0.0-beta.62",
+    "@storybook/addon-essentials": "^7.0.0-beta.62",
+    "@storybook/addon-interactions": "^7.0.0-beta.62",
+    "@storybook/addon-links": "^7.0.0-beta.62",
+    "@storybook/jest": "^0.0.11-next.0",
+    "@storybook/nextjs": "^7.0.0-beta.63",
+    "@storybook/react": "^7.0.0-beta.62",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/testing-react": "^2.0.0-next.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -64,7 +63,7 @@
     "msw-storybook-addon": "^1.7.0",
     "next-router-mock": "^0.9.2",
     "prettier": "^2.8.3",
-    "webpack": "^5.75.0",
+    "storybook": "^7.0.0-beta.62",
     "whatwg-fetch": "^3.6.2"
   }
 }
