--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@storybook/nextjs": "^7.0.0-beta.63",
     "@storybook/react": "^7.0.0-beta.62",
     "@storybook/testing-library": "^0.0.14-next.1",
-    "@storybook/testing-react": "^2.0.0-next.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -54,6 +53,7 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.11",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
     "jest": "^29.4.1",
@@ -63,7 +63,6 @@
     "msw-storybook-addon": "^1.7.0",
     "next-router-mock": "^0.9.2",
     "prettier": "^2.8.3",
-    "storybook": "^7.0.0-beta.62",
-    "whatwg-fetch": "^3.6.2"
+    "storybook": "^7.0.0-beta.62"
   }
 }
