--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "msw-storybook-addon": "^1.7.0",
     "next-router-mock": "^0.9.2",
     "prettier": "^2.8.3",
-    "storybook": "^7.0.0-beta.62"
+    "storybook": "^7.0.0-beta.62",
+    "whatwg-fetch": "^3.6.2"
   }
 }
